footer now increases in heigth for width of 750px or less to make sure it covers the full bottom of the page (no white bar at the far bottom now)

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -18,3 +18,13 @@ body {
   height: 90px;
   background-color: #ddd;
 }
+
+@media (max-width: 750px) {
+  body {
+    margin-bottom: 110px;
+  }
+  
+  .footer {
+    height: 110px;
+  }
+}
